force-app/main/default/objects/SVMXC__Route_Card__c/SVMXC__Route_Card__c.object-meta.xml
<CustomObject>
    <description>Route card contains high-level information about a product&apos;s journey through the repair process. Separate route cards are created for inbound (to repair) and outbound (to customer) journeys of a product</description>
    <label>Route Card</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Route Cards</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>