force-app/main/default/objects/SVMXC__Route_Card__c/fields/SVMXC__Case_Line__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Case_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the originating customer case line</description>
    <label>Case Line</label>
    <referenceTo>SVMXC__Case_Line__c</referenceTo>
    <relationshipLabel>Route Cards</relationshipLabel>
    <relationshipName>Route_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>