force-app/main/default/objects/SVMXC__Route_Card__c/fields/SVMXC__Current_Stop__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Current_Stop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Current stop in the route</description>
    <label>Current Stop</label>
    <referenceTo>SVMXC__Site__c</referenceTo>
    <relationshipLabel>Route Cards (Current Stop)</relationshipLabel>
    <relationshipName>Route_Cards1</relationshipName>
    <type>Lookup</type>
</CustomField>