force-app/main/default/objects/SVMXC__Route_Card__c/fields/SVMXC__Next_Stop__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Next_Stop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Next step in the route</description>
    <label>Next Stop</label>
    <referenceTo>SVMXC__Site__c</referenceTo>
    <relationshipLabel>Route Cards</relationshipLabel>
    <relationshipName>Route_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>